# chat

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  dependencies.py  main.py  routers.py
src/chats/: __init__.py  models.py  routers.py  schemas.py  selectors.py
src/database/: __init__.py  base.py
src/migrations/: env.py
src/migrations/versions/: fd54394c8159_.py
src/users/: models.py  routers.py  schemas.py
src/users/services/: auth.py  selectors.py
src/websockets/: connection_manager.py  handlers.py
